Fix horizontal overflow on website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@
     font-family: 'Comfortaa', cursive !important;
 }
 html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+    max-width: 100% !important;
+    overflow-x: hidden!important;
 }
 
 body {
